--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Веб Студія</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <!-- Header -->
@@ -31,10 +33,10 @@
       <!--Лінки зв'язку-->
       <ul class="menu-contacts">
         <li class="contact-mail">
-          <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="contacts-mail">info@devstudio.com</a>
         </li>
         <li class="contact-tel">
-          <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="contacts-tel">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -80,23 +82,28 @@
         <h2 class="our-business-title">Чим ми займаємося</h2>
         <ul class="our-business-list">
           <li class="our-business-item">
-            <img src="./images/img1.jpg" alt="Складання алглритмів на ноутбуці"
+            <img
+              src="./images/img1.jpg"
+              alt="Складання алглритмів на ноутбуці"
               width="370"
-              height="294">
+              height="294"
+            />
           </li>
           <li class="our-business-item">
             <img
               src="./images/img2.jpg"
               alt="Розробкв мобільних додатків"
               width="370"
-              height="294">
+              height="294"
+            />
           </li>
           <li class="our-business-item">
             <img
               src="./images/img3.jpg"
               alt="Кольорова гама на планшеті"
               width="370"
-              height="294">
+              height="294"
+            />
           </li>
         </ul>
       </section>
@@ -106,28 +113,28 @@
         <ul class="our-command-list">
           <li class="our-command-item">
             <div class="pic-worker">
-              <img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+              <img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
               <h3 class="our-name">Ігор Дем'яненко</h3>
               <p class="our-job" lang="en">Product Designer</p>
             </div>
           </li>
           <li class="our-command-item">
             <div class="pic-worker">
-              <img src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" height="260">
+              <img src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" height="260" />
               <h3 class="our-name">Ольга Рєпіна</h3>
               <p class="our-job" lang="en">Frontend Developer</p>
             </div>
           </li>
           <li class="our-command-item">
             <div class="pic-worker">
-              <img src="./images/img6.jpg" alt="Микола Тарасов" width="270" height="260">
+              <img src="./images/img6.jpg" alt="Микола Тарасов" width="270" height="260" />
               <h3 class="our-name">Микола Тарасов</h3>
               <p class="our-job" lang="en">Marketing</p>
             </div>
           </li>
           <li class="our-command-item">
             <div class="pic-worker">
-              <img src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" height="260">
+              <img src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" height="260" />
               <h3 class="our-name">Михайло Єрмаков</h3>
               <p class="our-job" lang="en">UI Designer</p>
             </div>
@@ -142,8 +149,8 @@
           ><span class="name-title">Web</span>Studio</a
         >
         <address>
-          <ul class="adress-list">
-            <li class="adress-item">
+          <ul class="address-list">
+            <li class="address-item">
               <a
                 href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA"
                 target="_blank"
@@ -151,10 +158,10 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li class="adress-item">
+            <li class="address-item">
               <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
             </li>
-            <li class="adress-item">
+            <li class="address-item">
               <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
             </li>
           </ul>
