--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <!-- Header -->
@@ -33,67 +35,77 @@
       <!--Лінки зв'язку-->
       <ul class="menu-contacts">
         <li class="contact-mail">
-          <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="contacts-mail">info@devstudio.com</a>
         </li>
         <li class="contact-tel">
-          <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="contacts-tel">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <!--Main-->
     <main>
       <section class="portfolio">
-        <ul class="portfolio-list">
-          <li class="portfolio-item"><button type="button">Усі</button></li>
-          <li class="portfolio-item"><button type="button">Веб-сайти</button></li>
-          <li class="portfolio-item"><button type="button">Додатки</button></li>
-          <li class="portfolio-item"><button type="button">Дизайн</button></li>
-          <li class="portfolio-item"><button type="button">Маркетинг</button></li>
-        </ul>
+        <dir class="portfolio-box">
+          <ul class="portfolio-list">
+            <li class="portfolio-item"><button class="portf-button" type="button">Усі</button></li>
+            <li class="portfolio-item">
+              <button class="portf-button" type="button">Веб-сайти</button>
+            </li>
+            <li class="portfolio-item">
+              <button class="portf-button" type="button">Додатки</button>
+            </li>
+            <li class="portfolio-item">
+              <button class="portf-button" type="button">Дизайн</button>
+            </li>
+            <li class="portfolio-item">
+              <button class="portf-button" type="button">Маркетинг</button>
+            </li>
+          </ul>
+        </dir>
         <h1 class="describe-title">Портфоліо з фотографіями</h1>
         <ul class="photo-list">
           <li class="photo-img">
-            <img src="./images/img8.jpg" alt="Ноутбук" width="370" height="294">
+            <img src="./images/img8.jpg" alt="Ноутбук" width="370" height="294" />
             <h2 class="photo-title">Технокряк</h2>
             <p class="photo-text"><span class="accent">Веб-сайт</span></p>
           </li>
           <li class="photo-img">
-            <img src="./images/img9.jpg" alt="Баскетбол" width="370" height="294">
+            <img src="./images/img9.jpg" alt="Баскетбол" width="370" height="294" />
             <h2 class="photo-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
             <p class="photo-text"><span class="accent">Дизайн</span></p>
           </li>
           <li class="photo-img">
-            <img src="./images/img10.jpg" alt="Логотип" width="370" height="294">
+            <img src="./images/img10.jpg" alt="Логотип" width="370" height="294" />
             <h2 class="photo-title">Ресторан <span lang="en">Seafood</span></h2>
             <p class="photo-text"><span class="accent">Додаток</span></p>
           </li>
           <li class="photo-img">
-            <img src="./images/img11.jpg" alt="Навушники" width="370" height="294">
+            <img src="./images/img11.jpg" alt="Навушники" width="370" height="294" />
             <h2 class="photo-title">Проєкт <span lang="en">Prime</span></h2>
             <p class="photo-text"><span class="accent">Маркетинг</span></p>
           </li>
           <li class="photo-img">
-            <img src="./images/img12.jpg" alt="Упаковка з картону" width="370" height="294">
+            <img src="./images/img12.jpg" alt="Упаковка з картону" width="370" height="294" />
             <h2 class="photo-title">Проєкт <span lang="en">Boxes</span></h2>
             <p class="photo-text"><span class="accent">Додаток</span></p>
           </li>
           <li class="photo-img">
-            <img src="./images/img13.jpg" alt="Монітор" width="370" height="294">
+            <img src="./images/img13.jpg" alt="Монітор" width="370" height="294" />
             <h2 class="photo-title" lang="en">Inspiration has no Borders</h2>
             <p class="photo-text"><span class="accent">Веб-сайт</span></p>
           </li>
           <li class="photo-img">
-            <img src="./images/img14.jpg" alt="Журнал" width="370" height="294">
+            <img src="./images/img14.jpg" alt="Журнал" width="370" height="294" />
             <h2 class="photo-title">Видання <span lang="en">Limited Edition</span></h2>
             <p class="photo-text"><span class="accent">Дизайн</span></p>
           </li>
           <li class="photo-img">
-            <img src="./images/img15.jpg" alt="Бірка" width="370" height="294">
+            <img src="./images/img15.jpg" alt="Бірка" width="370" height="294" />
             <h2 class="photo-title">Проєкт <span lang="en">LAB</span></h2>
             <p class="photo-text"><span class="accent">Маркетинг</span></p>
           </li>
           <li class="photo-img">
-            <img src="./images/img16.jpg" alt="Робоче місце" width="370" height="294">
+            <img src="./images/img16.jpg" alt="Робоче місце" width="370" height="294" />
             <h2 class="photo-title" lang="en">Growind Business</h2>
             <p class="photo-text"><span class="accent">Додаток</span></p>
           </li>
@@ -107,8 +119,8 @@
           ><span class="name-title">Web</span>Studio</a
         >
         <address>
-          <ul class="adress-list">
-            <li class="adress-item">
+          <ul class="address-list">
+            <li class="address-item">
               <a
                 href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA"
                 target="_blank"
@@ -116,10 +128,10 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li class="adress-item">
+            <li class="address-item">
               <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
             </li>
-            <li class="adress-item">
+            <li class="address-item">
               <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
             </li>
           </ul>
